# py-moodle

./: .gitignore  LICENSE  README.md  example.py  moodle_session.json  pyproject.toml  session.json
examples/: download_resource.py  get_course_contents.py  list_courses.py  quiz_attempt.py  utils.py
pymoodle/: __init__.py  api.py  client.py  core.py  exceptions.py  parsers.py  services.py  session.py  types.py  utils.py
