[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pymoodle"
version = "0.1.0"
description = "An unofficial Moodle API client for Python"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
  {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.25.0",
    "beautifulsoup4>=4.9.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/pymoodle"
"Bug Tracker" = "https://github.com/yourusername/pymoodle/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["pymoodle*"]
